@@ -19,11 +19,13 @@ import java.util.*;
 @Getter
 @Component
 public class DeviceConfig {
-
   private final List<TestStation> testStations = new ArrayList<>();
+
 
   @PostConstruct
   public void initialize() {
+    System.out.println("Initializing devices...");
+
     SubDevice energy1 = new SubDevice(1000, 1, 4, SubDeviceType.ENERGY);
     energy1.addEnergyCalculationType(EnergyCalculationType.ERZEUGTE_ENERGIE);
     energy1.addEnergyCalculationType(EnergyCalculationType.GENUTZTE_ENERGIE);
@@ -79,53 +81,65 @@ public class DeviceConfig {
     heating3.addHeatingCalculationType(HeatingCalculationType.RuCKLAUFTEMPERATUR);
 
     SubDevice gasTemperatur1 = new SubDevice(1, 1, 1, SubDeviceType.GAS);
-    gasTemperatur1.addGasCalculationType(GasCalculationType.GAS_TEMPERATURE);
-    gasTemperatur1.addGasCalculationType(GasCalculationType.GAS_METER);
-    gasTemperatur1.addGasCalculationType(GasCalculationType.GAS_PRESSURE);
-    gasTemperatur1.addGasCalculationType(GasCalculationType.ENVIRONMENT_TEMPERATURE);
-    gasTemperatur1.addGasCalculationType(GasCalculationType.ENVIRONMENT_PRESSURE);
+    gasTemperatur1.addGasCalculationType(GasCalculationType.GAS_TEMPERATUR);
+    gasTemperatur1.addGasCalculationType(GasCalculationType.GAS_ZAHLER);
+    gasTemperatur1.addGasCalculationType(GasCalculationType.GAS_DRUCK);
+    gasTemperatur1.addGasCalculationType(GasCalculationType.UMGEBUNGS_TEMPERATURE);
+    gasTemperatur1.addGasCalculationType(GasCalculationType.UMGEBUNGS_DRUCK);
 
 
     SubDevice gasTemperatur2 = new SubDevice(3, 1, 1, SubDeviceType.GAS);
-    gasTemperatur2.addGasCalculationType(GasCalculationType.GAS_TEMPERATURE);
-    gasTemperatur2.addGasCalculationType(GasCalculationType.GAS_METER);
-    gasTemperatur2.addGasCalculationType(GasCalculationType.GAS_PRESSURE);
-    gasTemperatur2.addGasCalculationType(GasCalculationType.ENVIRONMENT_TEMPERATURE);
-    gasTemperatur2.addGasCalculationType(GasCalculationType.ENVIRONMENT_PRESSURE);
+    gasTemperatur2.addGasCalculationType(GasCalculationType.GAS_TEMPERATUR);
+    gasTemperatur2.addGasCalculationType(GasCalculationType.GAS_ZAHLER);
+    gasTemperatur2.addGasCalculationType(GasCalculationType.GAS_DRUCK);
+    gasTemperatur2.addGasCalculationType(GasCalculationType.UMGEBUNGS_TEMPERATURE);
+    gasTemperatur2.addGasCalculationType(GasCalculationType.UMGEBUNGS_DRUCK);
 
 
     SubDevice gasTemperatur3 = new SubDevice(5, 1, 1, SubDeviceType.GAS);
-    gasTemperatur3.addGasCalculationType(GasCalculationType.GAS_TEMPERATURE);
-    gasTemperatur3.addGasCalculationType(GasCalculationType.GAS_METER);
-    gasTemperatur3.addGasCalculationType(GasCalculationType.GAS_PRESSURE);
-    gasTemperatur3.addGasCalculationType(GasCalculationType.ENVIRONMENT_TEMPERATURE);
-    gasTemperatur3.addGasCalculationType(GasCalculationType.ENVIRONMENT_PRESSURE);
+    gasTemperatur3.addGasCalculationType(GasCalculationType.GAS_TEMPERATUR);
+    gasTemperatur3.addGasCalculationType(GasCalculationType.GAS_ZAHLER);
+    gasTemperatur3.addGasCalculationType(GasCalculationType.GAS_DRUCK);
+    gasTemperatur3.addGasCalculationType(GasCalculationType.UMGEBUNGS_TEMPERATURE);
+    gasTemperatur3.addGasCalculationType(GasCalculationType.UMGEBUNGS_DRUCK);
 
     SubDevice bhkw = new SubDevice(0, 1, 1, SubDeviceType.BHKW);
-    bhkw.addBhkwCalculationType(BhkwCalculationType.EXHAUST_GAS_TEMPERATURE);
-    bhkw.addBhkwCalculationType(BhkwCalculationType.HEATING_WATER_FLOW);
-    bhkw.addBhkwCalculationType(BhkwCalculationType.HEATING_WATER_RETURN);
-    bhkw.addBhkwCalculationType(BhkwCalculationType.ENGINE_COOLANT_RETURN);
-    bhkw.addBhkwCalculationType(BhkwCalculationType.ENGINE_COOLANT_FLOW);
-    bhkw.addBhkwCalculationType(BhkwCalculationType.CONTROLLER);
-    bhkw.addBhkwCalculationType(BhkwCalculationType.BOX);
-    bhkw.addBhkwCalculationType(BhkwCalculationType.GENERATOR_WINDING);
-    bhkw.addBhkwCalculationType(BhkwCalculationType.ENGINE_OIL);
+    bhkw.addBhkwCalculationType(BhkwCalculationType.ABGAS_TEMPERATUR);
+    bhkw.addBhkwCalculationType(BhkwCalculationType.HEIZUNGS_WASSER_VORLAUF);
+    bhkw.addBhkwCalculationType(BhkwCalculationType.HEIZUNGS_WASSER_RUCKLAUF);
+    bhkw.addBhkwCalculationType(BhkwCalculationType. MOTOR_KUHLMITTEL_RUCKLAUF);
+    bhkw.addBhkwCalculationType(BhkwCalculationType.MOTOR_KUHLMITTEL_VORLAUF);
+    bhkw.addBhkwCalculationType(BhkwCalculationType.SCHALTSCHRANK);
+    bhkw.addBhkwCalculationType(BhkwCalculationType.GEHAUSE);
+    bhkw.addBhkwCalculationType(BhkwCalculationType.GENERATOR_WICKLUNG);
+    bhkw.addBhkwCalculationType(BhkwCalculationType.MOTOR_OIL);
+
+
+
+    SubDevice bhkw1 = new SubDevice(0, 1, 2, SubDeviceType.BHKW);
+    bhkw1.addBhkwCalculationType(BhkwCalculationType.BETRIEBS_STUNDEN);
+    bhkw1.addBhkwCalculationType(BhkwCalculationType.START_ANZAHL);
+
+
+
 
     // Create ModbusDevice (or Adapter) instances
-    ModbusDevice device1 = new ModbusDevice("192.168.125.56", 502, List.of(energy1));
-    ModbusDevice device2 = new ModbusDevice("192.168.125.56", 502,
+    ModbusDevice device1 = new ModbusDevice("192.168.xxx.xx", 502, List.of(energy1));
+
+    ModbusDevice device2 = new ModbusDevice("192.168.xxx.xx", 502,
         Arrays.asList(energy2, heating2));
-    ModbusDevice device3 = new ModbusDevice("192.168.125.56", 502,
+    ModbusDevice device3 = new ModbusDevice("192.168.xxx.xx", 502,
         Arrays.asList(energy3, heating3));
-    ModbusDevice device4 = new ModbusDevice("192.168.125.61", 502,
+    ModbusDevice device4 = new ModbusDevice("192.168.xxx.xx", 502,
         List.of(gasTemperatur1));
-    ModbusDevice device5 = new ModbusDevice("192.168.125.61", 502,
+    ModbusDevice device5 = new ModbusDevice("192.168.xxx.xx", 502,
         List.of(gasTemperatur2));
-    ModbusDevice device6 = new ModbusDevice("192.168.125.61", 502,
+    ModbusDevice device6 = new ModbusDevice("192.168.xxx.xx", 502,
         List.of(gasTemperatur3));
-    ModbusDevice device7 = new ModbusDevice("192.168.125.65", 502,
-        List.of(bhkw));
+    ModbusDevice device7 = new ModbusDevice("192.168.xxx.xx", 502,
+        Arrays.asList(bhkw,bhkw1));
+
+
 
     // Create TestStation instances
     TestStation testStation1 = new TestStation(1, "TestStation1", Arrays.asList(device1, device4, device7));
